Refactored; Changed some verbiage
