# server-src/newrelic.js
@@ -6,48 +6,48 @@
  * description of configuration variables and their potential values.
  */
 exports.config = {
-  /**
-   * Array of application names.
-   */
-  app_name: ['NartcSlackBot'],
-  /**
-   * Your New Relic license key.
-   */
-  license_key: '9801de927ab7623e5af0b1a23c51f84e1f163635',
-  logging: {
     /**
-     * Level at which to log. 'trace' is most useful to New Relic when diagnosing
-     * issues with the agent, 'info' and higher will impose the least overhead on
-     * production applications.
+     * Array of application names.
      */
-    level: 'info'
-  },
-  /**
-   * When true, all request headers except for those listed in attributes.exclude
-   * will be captured for all traces, unless otherwise specified in a destination's
-   * attributes include/exclude lists.
-   */
-  allow_all_headers: true,
-  attributes: {
+    app_name: ['NartcSlackBot'],
     /**
-     * Prefix of attributes to exclude from all destinations. Allows * as wildcard
-     * at end.
-     *
-     * NOTE: If excluding headers, they must be in camelCase form to be filtered.
-     *
-     * @env NEW_RELIC_ATTRIBUTES_EXCLUDE
+     * Your New Relic license key.
      */
-    exclude: [
-      'request.headers.cookie',
-      'request.headers.authorization',
-      'request.headers.proxyAuthorization',
-      'request.headers.setCookie*',
-      'request.headers.x*',
-      'response.headers.cookie',
-      'response.headers.authorization',
-      'response.headers.proxyAuthorization',
-      'response.headers.setCookie*',
-      'response.headers.x*'
-    ]
-  }
+    license_key: '9801de927ab7623e5af0b1a23c51f84e1f163635',
+    logging: {
+        /**
+         * Level at which to log. 'trace' is most useful to New Relic when diagnosing
+         * issues with the agent, 'info' and higher will impose the least overhead on
+         * production applications.
+         */
+        level: 'info'
+    },
+    /**
+     * When true, all request headers except for those listed in attributes.exclude
+     * will be captured for all traces, unless otherwise specified in a destination's
+     * attributes include/exclude lists.
+     */
+    allow_all_headers: true,
+    attributes: {
+        /**
+         * Prefix of attributes to exclude from all destinations. Allows * as wildcard
+         * at end.
+         *
+         * NOTE: If excluding headers, they must be in camelCase form to be filtered.
+         *
+         * @env NEW_RELIC_ATTRIBUTES_EXCLUDE
+         */
+        exclude: [
+            'request.headers.cookie',
+            'request.headers.authorization',
+            'request.headers.proxyAuthorization',
+            'request.headers.setCookie*',
+            'request.headers.x*',
+            'response.headers.cookie',
+            'response.headers.authorization',
+            'response.headers.proxyAuthorization',
+            'response.headers.setCookie*',
+            'response.headers.x*'
+        ]
+    }
 }
